feat: Add login and register Pages, add AuthService

--- a/foodplanner/angular.json
+++ b/foodplanner/angular.json
@@ -176,7 +176,7 @@
     }
   },
   "cli": {
-    "defaultCollection": "@ngrx/schematics"
+    "defaultCollection": "@ionic/angular-toolkit"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
